--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <title>
             Jobi's Space
         </title>
     </head>
 <body>
-<h1>Hello</h1>
+<h1>Hello & Welcome</h1>
 </body>
 
 </html>
